[package]
name = "uniswap_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
polars = { version = "0.32.1", features = ["lazy"] }
graphql_client = { version = "0.13", features = ["reqwest-blocking"] }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
lazy_static = "1.4.0"
